{{$NEXT}}
  - Allow use v5.36+ to satisfy StrictWarnings policy (marlencrabapple #50)

v1.0.2    2021-12-23 16:08:00 EST
  - Add IP::World to DiscouragedModules policy (DrHyde #46)

v1.0.1    2021-10-21 14:17:55 EDT
  - Support configuring allowed_modules for DiscouragedModules and
    PreferredAlternatives policies (Amorymeltzer #43)

v1.0.0    2021-05-27 02:44:33 EDT
  - Rename to Perl::Critic::Community and move policies to the 'community'
    theme (Freenode modules and theme remain as legacy aliases)

0.033     2020-12-21 19:39:58 EST
  - Update various recommendations for alternatives in DiscouragedModules policy
  - Add better examples for EmptyReturn (#39) and Each policies

0.032     2019-11-11 11:09:08 EST
  - Add check for CORE::wantarray and CORE'wantarray to WantArray policy (simcop2387 #37)

0.031     2019-09-25 19:00:39 EDT
  - Add FindBin to DiscouragedModules policy (#31)
  - Add MultidimensionalArrayEmulation policy (#35)

0.030     2019-08-26 11:27:15 EDT
  - Allow signature_enablers to be configured for Prototypes policy (#34)

0.029     2019-04-26 13:12:43 EDT
  - Added LexicalForeachIterator policy
  - Require PPI 1.252+ allowing simplifications to the DeprecatedFeatures and
    WhileDiamondDefaultAssignment policies

0.028     2018-11-29 19:32:49 EST
  - Split out lower severity violations from DiscouragedModules policy into a
    new PreferredAlternatives policy. Perl::Critic does not support filtering
    individual violations by severity, only policies, so this will allow
    separately configuring and filtering these violations.
  - Fixed DiscouragedModules and DeprecatedFeatures policy violations to report
    severity as configured.
  - Fixed DeprecatedFeatures to avoid false positives on method calls with the
    same name as autoderef functions.
  - Added /\C/, chdir(''), and bare here-docs to DeprecatedFeatures policy.

0.027     2018-06-20 20:17:06 EDT
  - Add LoopOnHash policy

0.026     2018-02-16 20:50:14 EST