@@ -1,5 +1,6 @@
 {{$NEXT}}
   - Allow use v5.36+ to satisfy StrictWarnings policy (marlencrabapple #50)
+  - Recognize use v5.36+ in the Prototypes policy as an indication that signatures are enabled
 
 v1.0.2    2021-12-23 16:08:00 EST
   - Add IP::World to DiscouragedModules policy (DrHyde #46)
